test/fail/instantiate-builtin.app
// Cannot instantiate built-in type 'Date'

application test

function f() {
    
    var d := Date{};
    
}

define page root() {

}
